# hungrycat

./: .gitignore  .hgignore  .hgsigs  .hgtags  .pylintrc  .travis.yml  LICENSE  Makefile  Makefile.in  README.rst  configure.ac  hungrycat.c  run-tests  tests.py
.github/workflows/: ci.yml
doc/: Makefile  README  changelog  manpage.rst  manpage.rst.in
private/: autoclean  autogen  build-source-tarball  check-rst  update-version
t/: consistent-version.t  test.t
tools/: autogen  build-source-tarball  bump-version
